[gd_scene load_steps=16 format=3 uid="uid://cjrde6hg3e34t"]

[ext_resource type="Script" path="res://Code/PlayersDeck.gd" id="1_wpy0m"]
[ext_resource type="PackedScene" uid="uid://drb5jcsr65rcj" path="res://Code/cards/Air Cards/dance_of_wind.tscn" id="2_77r1l"]
[ext_resource type="PackedScene" uid="uid://dq1wvexvemxll" path="res://Code/Attacks/quick_flame.tscn" id="3_82vem"]
[ext_resource type="PackedScene" uid="uid://nvy27jaxb3h8" path="res://Code/Attacks/fire_slash.tscn" id="4_r1b1n"]
[ext_resource type="PackedScene" uid="uid://cl06jeehwgipy" path="res://Code/Attacks/light_shot.tscn" id="5_453sb"]
[ext_resource type="PackedScene" uid="uid://d2u0sd4vfv8qv" path="res://Code/Attacks/Earth_Punch.tscn" id="6_u6ofo"]
[ext_resource type="PackedScene" uid="uid://675y7fulwdqa" path="res://Code/Attacks/wind_slash.tscn" id="7_4oiua"]
[ext_resource type="PackedScene" uid="uid://cr0m5n2w5xij1" path="res://Code/Attacks/dark_shot.tscn" id="8_0y47d"]
[ext_resource type="PackedScene" uid="uid://bulgyyeiue5ba" path="res://Code/Attacks/Water_Gun.tscn" id="9_y0umi"]
[ext_resource type="Script" path="res://Code/CardMover.gd" id="10_ghi2b"]
[ext_resource type="Script" path="res://Code/ComboManager.gd" id="11_pi5ir"]
[ext_resource type="Script" path="res://Code/PlayerAssets/EndComboManager.gd" id="12_fkax1"]
[ext_resource type="Theme" uid="uid://bphefhuacy6kd" path="res://Fonts/MainTheme.tres" id="13_ong8v"]
[ext_resource type="Script" path="res://Code/PlayerAssets/ComboLabel.gd" id="14_m1u1j"]
[ext_resource type="Script" path="res://Code/PlayerAssets/ComboLabelType.gd" id="15_4ccdm"]

[node name="PlayersDeck" type="Node2D"]
position = Vector2(981, 581)
rotation = 3.14159
script = ExtResource("1_wpy0m")

[node name="CardHolder" type="Node2D" parent="."]
position = Vector2(-52, 433)
scale = Vector2(0.5, 0.5)
metadata/_edit_group_ = true

[node name="Dance Of Wind" parent="CardHolder" instance=ExtResource("2_77r1l")]
position = Vector2(0, 10)

[node name="QuickFlame" parent="CardHolder" instance=ExtResource("3_82vem")]
position = Vector2(0, 10)
OnUseSignal = "DrawCard"

[node name="Fire_Slash2" parent="CardHolder" instance=ExtResource("4_r1b1n")]
position = Vector2(0, 10)

[node name="Light_Shot2" parent="CardHolder" instance=ExtResource("5_453sb")]
position = Vector2(0, 10)

[node name="Earth_Punch2" parent="CardHolder" instance=ExtResource("6_u6ofo")]
position = Vector2(0, 10)

[node name="Wind Slash" parent="CardHolder" instance=ExtResource("7_4oiua")]
position = Vector2(0, 10)

[node name="Light_Shot" parent="CardHolder" instance=ExtResource("5_453sb")]
position = Vector2(0, 10)

[node name="Fire_Slash" parent="CardHolder" instance=ExtResource("4_r1b1n")]
position = Vector2(0, 10)

[node name="Dark_Shot" parent="CardHolder" instance=ExtResource("8_0y47d")]
position = Vector2(0, 10)

[node name="Earth_Punch" parent="CardHolder" instance=ExtResource("6_u6ofo")]
position = Vector2(0, 10)

[node name="Water_Gun" parent="CardHolder" instance=ExtResource("9_y0umi")]
position = Vector2(0, 10)

[node name="CardsInPlayPlace" type="Node2D" parent="."]
position = Vector2(171, 255)
scale = Vector2(0.5, 0.5)
script = ExtResource("10_ghi2b")

[node name="Card1" type="Marker2D" parent="CardsInPlayPlace"]
position = Vector2(200, 512)

[node name="Card2" type="Marker2D" parent="CardsInPlayPlace"]
position = Vector2(300, 512)

[node name="Card3" type="Marker2D" parent="CardsInPlayPlace"]
position = Vector2(400, 512)

[node name="Card4" type="Marker2D" parent="CardsInPlayPlace"]
position = Vector2(500, 512)

[node name="Card5" type="Marker2D" parent="CardsInPlayPlace"]
position = Vector2(600, 512)

[node name="Card6" type="Marker2D" parent="CardsInPlayPlace"]
position = Vector2(700, 512)

[node name="Card7" type="Marker2D" parent="CardsInPlayPlace"]
position = Vector2(800, 512)

[node name="Card8" type="Marker2D" parent="CardsInPlayPlace"]
position = Vector2(900, 512)

[node name="Card9" type="Marker2D" parent="CardsInPlayPlace"]
position = Vector2(1000, 512)

[node name="Card10" type="Marker2D" parent="CardsInPlayPlace"]
position = Vector2(1100, 512)

[node name="CardsInHandHolder" type="Node2D" parent="."]
position = Vector2(-77, 398)
scale = Vector2(0.5, 0.5)

[node name="Button" type="Button" parent="."]
offset_left = 133.0
offset_top = 25.0
offset_right = 242.0
offset_bottom = 56.0
text = "Draw 5 cards"

[node name="UseArea" type="Marker2D" parent="."]
position = Vector2(856, 240)

[node name="DeckArea" type="Marker2D" parent="."]
position = Vector2(0, -61)

[node name="ComboManager" type="Node2D" parent="."]
script = ExtResource("11_pi5ir")

[node name="EndComboManager" type="Node2D" parent="."]
script = ExtResource("12_fkax1")

[node name="DeckAmount" type="Label" parent="."]
offset_top = 409.0
offset_right = 92.0
offset_bottom = 539.0
theme = ExtResource("13_ong8v")
text = "10"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ComboLabel" type="RichTextLabel" parent="."]
offset_left = 121.0
offset_top = 142.0
offset_right = 311.0
offset_bottom = 212.0
theme = ExtResource("13_ong8v")
theme_override_font_sizes/normal_font_size = 40
bbcode_enabled = true
script = ExtResource("14_m1u1j")

[node name="ComboLabelType" type="RichTextLabel" parent="."]
offset_top = 142.0
offset_right = 190.0
offset_bottom = 212.0
theme = ExtResource("13_ong8v")
theme_override_font_sizes/normal_font_size = 40
bbcode_enabled = true
script = ExtResource("15_4ccdm")

[node name="ComboLabelMistake" type="Label" parent="."]
offset_left = 171.0
offset_top = 378.0
offset_right = 235.0
offset_bottom = 409.0
theme = ExtResource("13_ong8v")
text = "2"

[connection signal="GiveWeaknessInfo" from="." to="ComboManager" method="_on_players_deck_give_weakness_info"]
[connection signal="GiveWeaknessInfo" from="." to="EndComboManager" method="_on_players_deck_give_weakness_info"]
[connection signal="OnDraw" from="." to="CardsInPlayPlace" method="_on_players_deck_on_draw"]
[connection signal="StartPlayerTurn" from="." to="ComboManager" method="ResetComboLife"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="ChangeCombo" from="ComboManager" to="ComboLabel" method="_on_combo_manager_change_combo"]
[connection signal="EndCombo" from="ComboManager" to="EndComboManager" method="_on_combo_manager_end_combo"]
[connection signal="EndTurn" from="ComboManager" to="." method="EndTurn"]
[connection signal="ChangeComboLabelType" from="EndComboManager" to="ComboLabelType" method="_on_end_combo_manager_change_combo_label_type"]
[connection signal="DrawComboBreak" from="EndComboManager" to="." method="_on_end_combo_manager_draw_combo_break"]
