[gd_scene load_steps=26 format=3 uid="uid://br5brytqnyr30"]

[ext_resource type="Script" path="res://Code/PlayersDeck.gd" id="1_j7q8m"]
[ext_resource type="PackedScene" uid="uid://nvy27jaxb3h8" path="res://Code/Attacks/fire_slash.tscn" id="2_061gt"]
[ext_resource type="PackedScene" uid="uid://drb5jcsr65rcj" path="res://Code/Attacks/dance_of_wind.tscn" id="2_f3hkh"]
[ext_resource type="PackedScene" uid="uid://dq1wvexvemxll" path="res://Code/Attacks/quick_flame.tscn" id="2_kmlou"]
[ext_resource type="PackedScene" uid="uid://cl06jeehwgipy" path="res://Code/Attacks/light_shot.tscn" id="3_1cgx3"]
[ext_resource type="Script" path="res://Code/CardMover.gd" id="3_u4ehx"]
[ext_resource type="PackedScene" uid="uid://d2u0sd4vfv8qv" path="res://Code/Attacks/Earth_Punch.tscn" id="4_udx3p"]
[ext_resource type="PackedScene" uid="uid://675y7fulwdqa" path="res://Code/Attacks/wind_slash.tscn" id="5_ie4vv"]
[ext_resource type="Script" path="res://Code/ComboManager.gd" id="5_s4ahh"]
[ext_resource type="PackedScene" uid="uid://cr0m5n2w5xij1" path="res://Code/Attacks/dark_shot.tscn" id="6_cui6t"]
[ext_resource type="PackedScene" uid="uid://bulgyyeiue5ba" path="res://Code/Attacks/Water_Gun.tscn" id="7_860y4"]
[ext_resource type="Script" path="res://Code/PlayerAssets/EndComboManager.gd" id="12_cma6a"]
[ext_resource type="Theme" uid="uid://bphefhuacy6kd" path="res://Fonts/MainTheme.tres" id="12_gh4qe"]
[ext_resource type="Script" path="res://Code/PlayerAssets/ComboLabel.gd" id="13_ef21n"]
[ext_resource type="Script" path="res://Code/PlayerAssets/ComboLabelType.gd" id="15_flb88"]
[ext_resource type="Texture2D" uid="uid://m452ft6obee4" path="res://Art/UI/HUD_Player_Layout.png" id="16_rbfhc"]
[ext_resource type="Texture2D" uid="uid://bgeg87cr58epg" path="res://Art/UI/HUD_HealthBar.png" id="17_hj6jj"]
[ext_resource type="Texture2D" uid="uid://cwbq8i3n85p7h" path="res://Art/UI/Button_End_Normal.png" id="17_m7nqr"]
[ext_resource type="Texture2D" uid="uid://0jbdy8i0susp" path="res://Art/UI/HUD_Heal.png" id="18_nsqjd"]
[ext_resource type="Texture2D" uid="uid://djx5iu233nf4i" path="res://Art/UI/Button_End_OnHover_OnClick.png" id="18_w4fi4"]
[ext_resource type="Script" path="res://Code/PlayerAssets/ProgressBar.gd" id="19_bj4tu"]
[ext_resource type="Texture2D" uid="uid://dq0q2jboya6jq" path="res://Art/UI/Button_Break_Normal.png" id="19_erfj7"]
[ext_resource type="Texture2D" uid="uid://bgwj2b72u6v3n" path="res://Art/UI/heaartl-export.png" id="19_nlmbl"]
[ext_resource type="Texture2D" uid="uid://2buotv1b7mpl" path="res://Art/UI/fulll-export.png" id="20_0nrun"]
[ext_resource type="Texture2D" uid="uid://dv527jp84e6iw" path="res://Art/UI/Button_Break_OnHover_OnClick.png" id="20_4f62i"]

[node name="PlayersDeck" type="Node2D"]
script = ExtResource("1_j7q8m")

[node name="CardHolder" type="Node2D" parent="."]
position = Vector2(-52, 433)
scale = Vector2(0.5, 0.5)
metadata/_edit_group_ = true

[node name="Dance Of Wind" parent="CardHolder" instance=ExtResource("2_f3hkh")]
position = Vector2(0, 10)

[node name="QuickFlame" parent="CardHolder" instance=ExtResource("2_kmlou")]
position = Vector2(0, 10)
OnUseSignal = "DrawCard"

[node name="Fire_Slash2" parent="CardHolder" instance=ExtResource("2_061gt")]
position = Vector2(0, 10)

[node name="Light_Shot2" parent="CardHolder" instance=ExtResource("3_1cgx3")]
position = Vector2(0, 10)

[node name="Earth_Punch2" parent="CardHolder" instance=ExtResource("4_udx3p")]
position = Vector2(0, 10)

[node name="Wind Slash" parent="CardHolder" instance=ExtResource("5_ie4vv")]
position = Vector2(0, 10)

[node name="Light_Shot" parent="CardHolder" instance=ExtResource("3_1cgx3")]
position = Vector2(0, 10)

[node name="Fire_Slash" parent="CardHolder" instance=ExtResource("2_061gt")]
position = Vector2(0, 10)

[node name="Dark_Shot" parent="CardHolder" instance=ExtResource("6_cui6t")]
position = Vector2(0, 10)

[node name="Earth_Punch" parent="CardHolder" instance=ExtResource("4_udx3p")]
position = Vector2(0, 10)

[node name="Water_Gun" parent="CardHolder" instance=ExtResource("7_860y4")]
position = Vector2(0, 10)

[node name="CardsInPlayPlace" type="Node2D" parent="."]
position = Vector2(271, 382)
scale = Vector2(0.5, 0.5)
script = ExtResource("3_u4ehx")

[node name="Card1" type="Marker2D" parent="CardsInPlayPlace"]
position = Vector2(200, 512)

[node name="Card2" type="Marker2D" parent="CardsInPlayPlace"]
position = Vector2(300, 512)

[node name="Card3" type="Marker2D" parent="CardsInPlayPlace"]
position = Vector2(400, 512)

[node name="Card4" type="Marker2D" parent="CardsInPlayPlace"]
position = Vector2(500, 512)

[node name="Card5" type="Marker2D" parent="CardsInPlayPlace"]
position = Vector2(600, 512)

[node name="Card6" type="Marker2D" parent="CardsInPlayPlace"]
position = Vector2(700, 512)

[node name="Card7" type="Marker2D" parent="CardsInPlayPlace"]
position = Vector2(800, 512)

[node name="Card8" type="Marker2D" parent="CardsInPlayPlace"]
position = Vector2(900, 512)

[node name="Card9" type="Marker2D" parent="CardsInPlayPlace"]
position = Vector2(1000, 512)

[node name="Card10" type="Marker2D" parent="CardsInPlayPlace"]
position = Vector2(1100, 512)

[node name="CardsInHandHolder" type="Node2D" parent="."]
position = Vector2(-77, 398)
scale = Vector2(0.5, 0.5)

[node name="Button" type="Button" parent="."]
offset_left = 133.0
offset_top = 25.0
offset_right = 242.0
offset_bottom = 56.0
text = "Draw 5 cards"

[node name="UseArea" type="Marker2D" parent="."]
position = Vector2(856, 240)

[node name="DeckArea" type="Marker2D" parent="."]
position = Vector2(0, -61)

[node name="ComboManager" type="Node2D" parent="."]
script = ExtResource("5_s4ahh")

[node name="EndComboManager" type="Node2D" parent="."]
script = ExtResource("12_cma6a")

[node name="DeckAmount" type="Label" parent="."]
offset_left = 296.0
offset_top = 259.0
offset_right = 388.0
offset_bottom = 389.0
theme = ExtResource("12_gh4qe")
text = "10"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ComboLabel" type="RichTextLabel" parent="."]
offset_left = 100.0
offset_top = 82.0
offset_right = 290.0
offset_bottom = 152.0
theme = ExtResource("12_gh4qe")
theme_override_font_sizes/normal_font_size = 40
bbcode_enabled = true
script = ExtResource("13_ef21n")

[node name="ComboLabelType" type="RichTextLabel" parent="."]
offset_left = 119.0
offset_top = 105.0
offset_right = 309.0
offset_bottom = 175.0
theme = ExtResource("12_gh4qe")
theme_override_font_sizes/normal_font_size = 40
bbcode_enabled = true
script = ExtResource("15_flb88")

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_top = 2.0
offset_right = 40.0
offset_bottom = 42.0

[node name="P{layerUi" type="TextureRect" parent="UI"]
texture_filter = 1
layout_mode = 0
offset_top = 382.0
offset_right = 241.0
offset_bottom = 460.0
scale = Vector2(2, 2)
mouse_filter = 2
texture = ExtResource("16_rbfhc")
stretch_mode = 2

[node name="ProgressBar" type="TextureProgressBar" parent="UI/P{layerUi"]
layout_mode = 0
offset_left = 81.0
offset_top = 55.0
offset_right = 234.0
offset_bottom = 72.0
value = 100.0
texture_under = ExtResource("17_hj6jj")
texture_progress = ExtResource("18_nsqjd")
script = ExtResource("19_bj4tu")

[node name="VBoxContainer" type="HBoxContainer" parent="UI/P{layerUi"]
layout_mode = 0
offset_left = 241.0
offset_top = 55.0
offset_right = 281.0
offset_bottom = 72.0
metadata/_edit_group_ = true

[node name="Heartr" type="TextureProgressBar" parent="UI/P{layerUi/VBoxContainer"]
layout_mode = 2
max_value = 1.0
value = 1.0
texture_under = ExtResource("19_nlmbl")
texture_progress = ExtResource("20_0nrun")

[node name="Heartr2" type="TextureProgressBar" parent="UI/P{layerUi/VBoxContainer"]
layout_mode = 2
max_value = 1.0
value = 1.0
texture_under = ExtResource("19_nlmbl")
texture_progress = ExtResource("20_0nrun")

[node name="Buttons" type="VBoxContainer" parent="UI"]
texture_filter = 1
layout_mode = 0
offset_left = 819.0
offset_top = 378.0
offset_right = 935.0
offset_bottom = 478.0

[node name="break" type="TextureButton" parent="UI/Buttons"]
layout_mode = 2
texture_normal = ExtResource("19_erfj7")
texture_pressed = ExtResource("20_4f62i")

[node name="Label" type="Label" parent="UI/Buttons/break"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -23.5
offset_top = -11.5
offset_right = 23.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("12_gh4qe")
text = "Break"

[node name="end" type="TextureButton" parent="UI/Buttons"]
texture_filter = 1
layout_mode = 2
texture_normal = ExtResource("17_m7nqr")
texture_pressed = ExtResource("18_w4fi4")

[node name="Label" type="Label" parent="UI/Buttons/end"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -14.5
offset_top = -7.5
offset_right = 14.5
offset_bottom = 7.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("12_gh4qe")
text = "End"

[connection signal="GiveWeaknessInfo" from="." to="ComboManager" method="_on_players_deck_give_weakness_info"]
[connection signal="GiveWeaknessInfo" from="." to="EndComboManager" method="_on_players_deck_give_weakness_info"]
[connection signal="OnDraw" from="." to="CardsInPlayPlace" method="_on_players_deck_on_draw"]
[connection signal="StartPlayerTurn" from="." to="ComboManager" method="ResetComboLife"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="ChangeCombo" from="ComboManager" to="ComboLabel" method="_on_combo_manager_change_combo"]
[connection signal="EndCombo" from="ComboManager" to="EndComboManager" method="_on_combo_manager_end_combo"]
[connection signal="EndTurn" from="ComboManager" to="." method="EndTurn"]
[connection signal="ChangeComboLabelType" from="EndComboManager" to="ComboLabelType" method="_on_end_combo_manager_change_combo_label_type"]
[connection signal="DrawComboBreak" from="EndComboManager" to="." method="_on_end_combo_manager_draw_combo_break"]
[connection signal="pressed" from="UI/Buttons/break" to="ComboManager" method="_on_break_pressed"]
